hello-kube/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
     name: demo
