hello-kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo
spec:
  ports:
    - port: 8080
  selector:
    app: helloworld-app
  type: NodePort
