hello-kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:eu-west-1:836327875442:certificate/11bcc7fb-0a5e-4324-a4ea-6bfaee648fb7'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
  name: demo-ingress
  namespace: demo
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: demo-service
            port:
              number: 8080
        path: /
        pathType: Prefix
